appId: com.example.flutter_app
tags: ["P0", "caregiver", "tasks"]
---
# Test: Manage Tasks (Caregiver)
# Priority: High
# Description: Caregiver views and manages tasks for all patients.

- runFlow: 
    when: 
      notVisible: "Dashboard"
    file: "../../helpers/common_flows/sign_in_caregiver.yaml"
- assertVisible: ".*Today's Tasks.*"
- tapOn: "Manage.*"
- assertVisible: "Tasks"
- back
- tapOn: ".*Tasks"
- assertVisible: "Tasks"
- back
- tapOn: "Tasks.*"
- assertVisible: "Tasks"
- tapOn: ".*Medication.*"
- assertVisible: "Task Details.*"
- assertVisible: ".*Medication reminder.*"
- assertVisible: ".*Mark task as complete.*"
- back
- back

# TODO: task screen is not connected to tasks provider and dashboard task don't update basked on marked complete
